FDG-9447 shifting fixes for charts 3/4 (mobile still wip)

--- a/src/layouts/explainer/sections/national-debt/breaking-down-the-debt/breaking-down-the-debt.module.scss
+++ b/src/layouts/explainer/sections/national-debt/breaking-down-the-debt/breaking-down-the-debt.module.scss
@@ -1,5 +1,15 @@
 @use 'src/variables.module' as *;
 
+.loadingIndicatorContainer {
+  min-height: 26.875rem;
+  .loadingIcon {
+    @include grayLargeLoadingIcon;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
 @media screen and (min-width: $breakpoint-lg) {
   .debtBreakdownSectionGraphContainer {
     .title.simple {
