--- a/src/layouts/explainer/sections/national-debt/breaking-down-the-debt/intragovernmental-holdings-chart/intragovernmental-holdings-chart.module.scss
+++ b/src/layouts/explainer/sections/national-debt/breaking-down-the-debt/intragovernmental-holdings-chart/intragovernmental-holdings-chart.module.scss
@@ -4,6 +4,17 @@
   width: 100%;
 }
 
+.container {
+  --chart-height: 27.69rem;
+}
+
+.loadingIcon {
+  @include grayLargeLoadingIcon;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .title {
   margin-bottom: 18px;
 }
